Add Google Login 11/23/2021

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -122,5 +122,14 @@
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@mipmap/ic_launcher_foreground" />
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/GoogleLogin"
+        android:layout_width="153dp"
+        android:layout_height="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
