--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,27 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#fdba03</color>
+    <color name="colorPrimaryDark">#fc9802</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorCreateStatusBar">#c2c2b5</color>
+    <color name="colorCreateActionBar">#fcfcfc</color>
+
+    <color name="colorBg">#e7e5e5</color>
+    <color name="colorDate">#e9e8e8</color>
+    <color name="colorBottomIcon">#f5f3f3</color>
+    <color name="colorWhiteSheet">#f7f6f6</color>
+    <color name="colorImgBtn">#797676</color>
+
+    <color name="bgButtonColor2">#e7c568</color>
+    <color name="bgButtonColor3">#f0a1ff</color>
+    <color name="bgButtonColor4">#afa7ff</color>
+    <color name="bgButtonColor5">#ffa7a8</color>
+    <color name="bgButtonColor6">#91f582</color>
+
+    <color name="colorBgPattern">#403535</color>
+    <color name="colorCorrectPattern">#208b1c</color>
+
+    <color name="colorAppThemePattern">#393131</color>
 </resources>
