--- a/app/src/debug/res/layout/bottom_sheet_plus_layout.xml
+++ b/app/src/debug/res/layout/bottom_sheet_plus_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     android:background="@color/colorWhiteSheet"
     app:behavior_hideable="true"
     android:paddingBottom="50dp"
