fix add page 11/27/2021

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -50,8 +50,12 @@
                 app:showAsAction="never" />
         </menu>
     </item>
-
-
+    <item
+        android:orderInCategory="6"
+        android:title="Profile" />
+    <item
+        android:orderInCategory="7"
+        android:title="Logout" />
 
 
 </menu>
