--- a/app/src/debug/res/layout/bottom_sheet_plus_layout.xml
+++ b/app/src/debug/res/layout/bottom_sheet_plus_layout.xml
@@ -56,6 +56,27 @@
             android:text="@string/choose_image"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/getlocation"
+        android:layout_weight="1"
+        android:layout_marginTop="20dp"
+        android:paddingBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:layout_width="22dp"
+            android:layout_height="21dp"
+            app:srcCompat="@drawable/location" />
+
+        <TextView
+            android:layout_marginStart="15dp"
+            android:layout_width="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:layout_height="match_parent"
+            android:text="@string/choose_location"/>
+
+    </LinearLayout>
 
     <!--<LinearLayout
         android:id="@+id/bgChangeLL"
