--- a/app/src/main/res/layout/activity_create_or_show_note.xml
+++ b/app/src/main/res/layout/activity_create_or_show_note.xml
@@ -47,34 +47,6 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/latid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:hint="lat"
-                android:inputType="textMultiLine|text"
-                android:lines="3"
-                android:paddingStart="10dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="11dp"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/longid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:hint="long"
-                android:inputType="textMultiLine|text"
-                android:lines="3"
-                android:paddingStart="10dp"
-                android:paddingTop="5dp"
-                android:paddingEnd="11dp"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textStyle="bold" />
-
-            <EditText
                 android:id="@+id/editNote"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -88,6 +60,36 @@
                 android:paddingTop="10dp"
                 android:paddingEnd="10dp"
                 android:textAppearance="?android:textAppearanceMedium" />
+
+            <EditText
+                android:id="@+id/editLatid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:hint="@string/lat"
+                android:inputType="textMultiLine|text"
+                android:lines="3"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="11dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+            <EditText
+                android:id="@+id/editLongid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:hint="@string/longid"
+                android:inputType="textMultiLine|text"
+                android:lines="3"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="11dp"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textStyle="bold"
+                android:visibility="visible" />
 
         </LinearLayout>
     </ScrollView>
