--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,10 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:itemCount="2"
         android:visibility="gone"
-        tools:listitem="@layout/custom_list_grid_view_layout"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:itemCount="2"
+        tools:listitem="@layout/custom_list_grid_view_layout" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
