--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -44,6 +44,21 @@
         map:srcCompat="@drawable/plus_icon" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/EditButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/floatingActionButton4"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="40dp"
+        android:focusable="true"
+        android:onClick="gotToCreateNewNoteActivity"
+        android:visibility="gone"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:srcCompat="@drawable/choose_image_icon" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
