--- a/app/src/debug/res/layout/custom_list_grid_view_layout.xml
+++ b/app/src/debug/res/layout/custom_list_grid_view_layout.xml
@@ -25,34 +25,31 @@
             android:contentDescription="@string/imageview"
             android:gravity="center_horizontal"
             android:scaleType="fitCenter"
-            android:visibility="gone"
             tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/headLine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Zakaria"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:visibility="gone"
-            android:ellipsize="end"
+            android:layout_below="@id/userImg"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_below="@id/userImg" />
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textStyle="bold"
+            tools:text="Headline" />
 
         <TextView
             android:id="@+id/details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="hossain"
-            android:visibility="gone"
-            android:maxLines="7"
-            android:ellipsize="end"
+            android:layout_below="@id/headLine"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="5dp"
-            android:layout_below="@id/headLine" />
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:maxLines="7"
+            tools:text="details" />
 
         <TextView
             android:id="@+id/dateShow"
