--- a/app/src/main/res/layout/activity_user_search.xml
+++ b/app/src/main/res/layout/activity_user_search.xml
@@ -4,25 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Users_Search">
+    tools:context=".activities.UserSearch">
 
     <TextView
         android:id="@+id/UserEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
         android:text="Email"
-        app:layout_constraintStart_toEndOf="@+id/UserEmailtext"
-        tools:layout_editor_absoluteY="73dp" />
+        app:layout_constraintStart_toEndOf="@+id/Userimg"
+        app:layout_constraintTop_toBottomOf="@+id/User_search" />
 
     <TextView
         android:id="@+id/usersID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:text="ID"
-        app:layout_constraintStart_toEndOf="@+id/userIDtext"
-        tools:layout_editor_absoluteY="93dp" />
+        app:layout_constraintStart_toEndOf="@+id/Userimg"
+        app:layout_constraintTop_toBottomOf="@+id/UserEmail" />
 
     <SearchView
         android:id="@+id/User_search"
@@ -36,38 +38,20 @@
         android:elevation="5dp"
         android:iconifiedByDefault="false"
         android:queryHint="UID Search..."
-        app:layout_constraintBottom_toTopOf="@+id/Userimg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/Userimg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="73dp"
+        app:layout_constraintTop_toBottomOf="@+id/User_search"
         tools:srcCompat="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/UserEmailtext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="User's email:"
-        app:layout_constraintStart_toEndOf="@+id/Userimg"
-        tools:layout_editor_absoluteY="74dp" />
-
-    <TextView
-        android:id="@+id/userIDtext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="User's ID:"
-        app:layout_constraintStart_toEndOf="@+id/Userimg"
-        app:layout_constraintTop_toBottomOf="@+id/UserEmailtext" />
 
     <Button
         android:id="@+id/Searchbutton"
@@ -91,4 +75,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
